variables.RunHalf.scala.error
Compilation error:
RunHalf:8: error: not found: value couleur
  couleur=getGroundColor()
  ^RunHalf:9: error: not found: value couleur
  if (couleur=Color.orange){
      ^